  - allow bus control only for 030
    (i.e. prevent TOS forcing 16Mhz at boot with higher CPU levels)
- Memory:
  - TT-RAM / 32-bit addressing support both for TT & Falcon emulation
    (when using EmuTOS, this requires CVS snapshot 2014-12-15 or later)
- FDC changes:
  - for STX disks, fix type I commands with verify bit on tracks with no sector

Emulator:
- Support for compiling with libSDL2 (experimental)
  - SDL2 supports other than 2x scaling factors for ST/e emulation
- Misc fixes:
  - Fix: WinUAE CPU core (FPU) memory state restore
  - Fix: chrash with VDI extended resolution emulation when
         C: isn't GEMDOS HD emulated drive
  - Fix: compilation when zlib is missing
- Additional TOS run-time patching:
  - Support fast boot also with TOS v3 & v4
  - Support 32-bit addressing also with TOS v4
  - Replace TOS v4 instructions unsupported on 060
  - HW specific phystop value in VDI mode
- Options:
  - Fast boot (warm boot / memory check bypass) is disabled by default
  - 68060 CPU level and --ttram support with new WinUAE CPU core
  - New --png-level option to decrease AVI compression load
- Hard drive emulation:
  - SDL GUI & cmdline option to skip drives used by partitions on
    ACSI & IDE images when assigning drive for GEMDOS HD emulation.
    Partition count parsed by Hatari might not match count used by
    Atari HD driver due to driver differences in interpreting disk MBR
  - Refuse to mount same HD image from multiple Hatari instances
    (on platforms supporting BSD flock()), to avoid corrupting them
- SDL GUI:
  - joystick navigation in options GUI
  - keyboard navigation & shortcuts in options GUI
  - sort file selector items case-insensitively with folders first
  - Partial support for showing Latin1 chars from UTF-8 file names
  - AltGr+F<1-4> keyboard shortcuts to switch mode/type for emulated
    joysticks and joypads
  - Fix: sync joystick changes with statusbar
  - Fix: update default max window size for 2-line statusbar